功能：引入其他模块

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
         <module>./module-generation</module>
         <module>./module-generation-business</module>
-        <!--<module>./module-generation-controller</module>-->
+        <module>./module-generation-controller</module>
         <!--<module>./module-generation-repository-mysql</module>-->
         <!--<module>./client-generation</module>-->
 
