功能：模块管理控制类

--- a/module-generation-controller/pom.xml
+++ b/module-generation-controller/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>module-generation</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.windf</groupId>
+            <artifactId>plugin-controller-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 
