功能：模块添加

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>./core</module>
 
         <module>./plugin-service-business</module>
+        <module>./plugin-controller-api</module>
 
         <module>./module-generation</module>
         <module>./module-generation-business</module>
