--- a/project/pom.xml
+++ b/project/pom.xml
@@ -12,6 +12,16 @@
     <artifactId>project</artifactId>
     <packaging>war</packaging>
     <dependencies>
+        <!-- 项目启动 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.windf.minimalism</groupId>
             <artifactId>module-generation-controller</artifactId>
@@ -24,5 +34,13 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
