--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,12 @@
 
         <module>./plugin-service-business</module>
         <module>./plugin-controller-api</module>
+        <module>./plugin-repository-file</module>
 
         <module>./module-generation</module>
         <module>./module-generation-business</module>
         <module>./module-generation-controller</module>
+        <module>./module-generation-repository</module>
         <!--<module>./module-generation-repository-mysql</module>-->
         <!--<module>./client-generation</module>-->
 
