--- a/project/pom.xml
+++ b/project/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>module-generation-repository</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
