功能：添加实体测试模块，以及抽象测试类

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <module>./plugin-controller-api</module>
         <module>./plugin-repository-file</module>
 
+        <module>./test-controller-api</module>
+
         <module>./module-generation</module>
         <module>./module-generation-business</module>
         <module>./module-generation-controller</module>
