--- a/project/pom.xml
+++ b/project/pom.xml
@@ -38,10 +38,10 @@
             <version>1.0.0</version>
         </dependency>
 
-
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>com.windf</groupId>
+            <artifactId>test-controller-api</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
