--- a/module-generation-java/pom.xml
+++ b/module-generation-java/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>module-generation-java</artifactId>
     <packaging>jar</packaging>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
