--- a/project/pom.xml
+++ b/project/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>module-generation-repository</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.windf.minimalism</groupId>
+            <artifactId>module-generation-java</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.windf</groupId>
