--- a/module-generation-template-java-windf/src/main/resources/template/java/windf/module-${module.code}-repository-mysql/pom.xml
+++ b/module-generation-template-java-windf/src/main/resources/template/java/windf/module-${module.code}-repository-mysql/pom.xml
@@ -3,10 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.windf</groupId>
-        <artifactId>abstract-combination</artifactId>
-        <version>1.0.0</version>
-        <relativePath>../abstract-combination/pom.xml</relativePath>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,6 +13,10 @@
     <artifactId>module-user-repository-mysql</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
