功能：模板修正，pom引入等

--- a/module-generation-template-java-windf/src/main/resources/template/java/windf/module-${module.code}-business/pom.xml
+++ b/module-generation-template-java-windf/src/main/resources/template/java/windf/module-${module.code}-business/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>${module.namespace}</groupId>
             <artifactId>module-${module.code}</artifactId>
-            <version>1.0.0</version>
+            <version>${module.version}</version>
         </dependency>
         <dependency>
             <groupId>com.windf</groupId>
