--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,12 +15,35 @@
     <version>1.0.0</version>
     <description>核心包，所有模块和插件都必须引用</description>
 
+    <properties>
+        <project.slf4j.version>1.7.21</project.slf4j.version>
+        <project.log4j.version>1.2.17</project.log4j.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
+
+        <!-- log begin -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${project.slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${project.slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${project.log4j.version}</version>
+        </dependency>
+        <!-- log end -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
